chore: adicionando scripts de start, dev e test no package.json

--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "jest": "^28.1.0",
     "nodemon": "^2.0.16"
   },
-  "scripts": {},
+  "scripts": {
+    "start": "node ./src/app.js",
+    "dev": "nodemon ./src/app.js",
+    "test": "jest"
+  },
   "author": "",
   "license": "ISC"
 }
